修改seajs的配置使项目放入任何访问路径下均可使用

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{user}}<span
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{getUserName()}}<span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a ng-click="logout()">退出系统</a></li>
