--- a/app/tpl/restaurant/restaurant-list.html
+++ b/app/tpl/restaurant/restaurant-list.html
@@ -1,9 +1,9 @@
-<!--<form class="form-inline" role="form" name="searchTopicFormValidation"-->
+<!--<form class="form-inline" role="form" name="searchRestaurantFormValidation"-->
 <!--ng-submit="search()">-->
 <!--<div class="row">-->
 <!--<div class="col-xs-5">-->
 <!--<div class="form-group"-->
-<!--ng-class="{'has-error':searchTopicFormValidation.status.$invalid&&submitted,'has-success':searchTopicFormValidation.status.$valid&&submitted}">-->
+<!--ng-class="{'has-error':searchRestaurantFormValidation.status.$invalid&&submitted,'has-success':searchRestaurantFormValidation.status.$valid&&submitted}">-->
 <!--<label class="control-label" for="status">专题状态&nbsp;</label>-->
 <!--&lt;!&ndash;<input type="date" class="form-control" id="date" placeholder="选择查看日期">&ndash;&gt;-->
 <!--<select class="form-control" name="status" ng-model="searchForm.status"-->
@@ -24,7 +24,7 @@
 <!--</div>-->
 <!--<div class="col-xs-2">-->
 <!--<button type="submit" class="btn btn-primary">查询</button>-->
-<!--<a class="btn btn-primary" ng-click="importTopic()" ng-disabled="loading"><span-->
+<!--<a class="btn btn-primary" ng-click="importRestaurant()" ng-disabled="loading"><span-->
 <!--ng-show="!loading">导入</span> <span-->
 <!--ng-show="loading">导入中...</span></a>-->
 <!--</div>-->
@@ -34,8 +34,8 @@
 <div class="panel panel-info">
     <div class="panel-heading text-center">
         <label>餐厅列表</label></div>
-    <!--<span ng-show="topicList.length!=0">（{{boutique.status}}）</span>-->
-    <div class="panel-body">
+    <!--<span ng-show="restaurantList.length!=0">（{{boutique.status}}）</span>-->
+    <div class="panel-body restaurant-list">
         <table class="table table-bordered table-hover">
             <thead>
             <tr class="text">
@@ -56,65 +56,50 @@
                 <td>市</td>
                 <td>省</td>
                 <td>邮编</td>
-                <td>注册日期</td>
+                <!--<td>注册日期</td>-->
                 <td>操作</td>
             </tr>
             </thead>
-            <!--x-drag-sort="data-drag-id" x-drag-completed="sortTopic"-->
+            <!--x-drag-sort="data-drag-id" x-drag-completed="sortRestaurant"-->
             <tbody>
             <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUESTING">-->
                 <!--<td colspan="10" class="text-center table-hint">努力加载中...</td>-->
             <!--</tr>-->
-            <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_SUCCESSED&&searchResult.topicList.length==0">-->
+            <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_SUCCESSED&&searchResult.restaurantList.length==0">-->
                 <!--<td colspan="10" class="text-center table-hint">查询结果为空</td>-->
             <!--</tr>-->
             <!--<tr ng-show="getRestaurantListStatus===REQUEST_STATUS.REQUEST_FAILED">-->
                 <!--<td colspan="10" class="text-center table-hint">查询失败，请重新加载</td>-->
             <!--</tr>-->
-            <tr ng-repeat="topic in searchResult.topicList" data-drag-id="{{topic.id}}">
-                <td>{{topic.position}}</td>
-                <td>{{topic.title}}</td>
-                <td>{{topic.introduce}}</td>
-                <td>{{topic.status}}</td>
-                <td>{{topic.release_time}}</td>
-                <td>{{topic.create_account}}</td>
-                <td>{{topic.create_time}}</td>
-                <td>{{topic.modify_account}}</td>
-                <td>{{topic.modify_time}}</td>
+            <tr ng-repeat="restaurant in restaurantList">
+                <td>{{$index+1}}</td>
+                <td><img ng-src="{{restaurant.imageLinkThumbnail}}" x-view-img/></td>
+                <td><img ng-src="{{restaurant.imageLinkPoster}}" x-view-img/></td>
+                <td>{{restaurant.name}}</td>
+                <td><img ng-src="{{restaurant.imageLinkPoster}}" x-view-img/></td>
+                <td>法人代表</td>
+                <td>法人代表电话</td>
+                <td>负责人</td>
+                <td>负责人电话</td>
+                <td>{{restaurant.restaurantDescription}}</td>
+                <td>{{restaurant.phone.area}}-{{restaurant.phone.phone}}</td>
+                <td>{{restaurant.email}}</td>
+                <td>{{restaurant.website}}</td>
+                <td>{{restaurant.address.street}}</td>
+                <td>{{restaurant.address.city}}</td>
+                <td>{{restaurant.address.state}}</td>
+                <td>{{restaurant.address.zipcode}}</td>
                 <td>
                     <div class="btn-group btn-group-sm">
                         <a type="button" class="btn btn-default"
-                           title="锁定确认"
-                           x-selector="#topic-lock-form"
-                           x-popover
-                           x-close="deletePopover"
-                           x-style="width:200px;height:100px;"
-                           data-placement="left"
-                           ng-hide="topic.position_lock==1"
-                                >锁定至
+                           ng-href="#/restaurant/restaurant-add/{{restaurant.restaurantId}}">编辑
                         </a>
                         <a type="button" class="btn btn-default"
-                           ng-click="moveUp(topic.id,topic.position)" ng-show="topic.position_lock!=1">上移
-                        </a>
-                        <a type="button" class="btn btn-default"
-                           ng-click="moveDown(topic.id,topic.position)" ng-show="topic.position_lock!=1">下移
-                        </a>
-                        <a type="button" class="btn btn-default"
-                           ng-click="unlock(topic.id)" ng-show="topic.position_lock==1">解锁
-                        </a>
-                        <a type="button" class="btn btn-default"
-                           ng-href="#/topic/topic-add/{{topic.id}}">编辑
-                        </a>
-                        <a type="button" class="btn btn-default"
-                           ng-click="deleteTopic(topic.id)"
+                           ng-click="deleteRestaurant(restaurant.id)"
                            x-confirm-hint
-                           x-modal-title="删除专题"
+                           x-modal-title="删除餐厅"
                            x-modal-content="确认删除吗？">
                             删除
-                        </a>
-                        <a type="button" class="btn btn-default"
-                           ng-click="pushToFrontEnd(topic.id)">
-                            刷至前端
                         </a>
                     </div>
                 </td>
@@ -122,7 +107,7 @@
             </tbody>
         </table>
     </div>
-    <div class="panel-footer" ng-show="searchResult.topicList.length!=0">
+    <div class="panel-footer" ng-show="searchResult.restaurantList.length!=0">
         <div style="position: relative;height: 70px;">
             <x-pagination style="position: absolute;right: 20px;" x-pagination-scope="paginationScope">
             </x-pagination>
@@ -131,20 +116,3 @@
     </div>
 </div>
 </div>
-<template id="topic-lock-form" class="hide">
-    <form class="form-horizontal" name="lockPositionFormValidation"
-          ng-submit="lockPosition(lockPositionFormValidation.$valid,this)" novalidate="">
-        <div class="form-group"
-             ng-class="{'has-error':lockPositionFormValidation.lockPosition.$invalid&&lockPositionSubmitted,'has-success':lockPositionFormValidation.lockPosition.$valid&&lockPositionSubmitted}">
-            <div class="col-xs-12">
-                <input class="form-control" placeholder="专题锁定位置" type="number" ng-model="topic.lockPosition"
-                       name="lockPosition" required/>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-8">
-                <button type="submit" class="btn btn-default">确定</button>
-            </div>
-        </div>
-    </form>
-</template>
