解决login.html路径错误问题

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 </div>
-<div ng-include="'/tpl/login.html'" ng-if="!isLogin()">
+<div ng-include="loginTemplate" ng-if="!isLogin()">
 
 </div>
 <x-alert
